--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
+
+  }
 }
