--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
+    //"TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
 
   }
 }
