--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -9,6 +9,10 @@
   "ConnectionStrings": {
     //"TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
     "TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
-
+  },
+  "Cloudinary": {
+    "CloudName": "dlu6zfjwp",
+    "ApiKey": "641682784227959",
+    "ApiSecret": "hNS3Hw04KfyLcEySBuej8I2J_Co"
   }
 }
