feat(auth): add Microsoft Identity integration

--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
-    "TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "TechLekhAuthDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Cloudinary": {
     "CloudName": "dlu6zfjwp",
