--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -5,16 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TechLekhDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True",
-    "TechLekhAuthDbConnectionString": "Server=DESKTOP-TTU1A8L\\SQLEXPRESS_2019;Database=TechLekhAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
-    //"TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True",
-    //"TechLekhAuthDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
-  },
-  "Cloudinary": {
-    "CloudName": "dlu6zfjwp",
-    "ApiKey": "641682784227959",
-    "ApiSecret": "hNS3Hw04KfyLcEySBuej8I2J_Co"
-  }
+  "AllowedHosts": "*"
+  
 }
