--- a/TechLekh.Web/TechLekh.Web.csproj
+++ b/TechLekh.Web/TechLekh.Web.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
+  </ItemGroup>
+
 </Project>
