refactor: move DbContxt to Infra layer

--- a/TechLekh.Infra/TechLekh.Infra.csproj
+++ b/TechLekh.Infra/TechLekh.Infra.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
+  </ItemGroup>
+
 </Project>
