refactor: move repository interfaces to Application layer

--- a/TechLekh.Application/TechLekh.Application.csproj
+++ b/TechLekh.Application/TechLekh.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
+  </ItemGroup>
+
 </Project>
