--- a/TechLekh.Infra/TechLekh.Infra.csproj
+++ b/TechLekh.Infra/TechLekh.Infra.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.28.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.23" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.23">
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TechLekh.Application\TechLekh.Application.csproj" />
     <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
   </ItemGroup>
 
