chore(dep): adjust project dependencies

--- a/TechLekh.Web/TechLekh.Web.csproj
+++ b/TechLekh.Web/TechLekh.Web.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
+    <ProjectReference Include="..\TechLekh.Infra\TechLekh.Infra.csproj" />
   </ItemGroup>
 
   <ItemGroup>
