refactor: fix refs in Web project

--- a/TechLekh.Web/appsettings.json
+++ b/TechLekh.Web/appsettings.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "TechLekhDbConnectionString": "Server=LAPTOP-UUTJC90C\\SQLEXPRESS;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "TechLekhAuthDbConnectionString": "Server=LAPTOP-UUTJC90C\\SQLEXPRESS;Database=TechLekhAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+    //"TechLekhDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhDb;Trusted_Connection=True;TrustServerCertificate=True",
+    //"TechLekhAuthDbConnectionString": "Server=DESKTOP-K9E7LPB\\SQLEXPRESS_2017;Database=TechLekhAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Cloudinary": {
+    "CloudName": "dlu6zfjwp",
+    "ApiKey": "641682784227959",
+    "ApiSecret": "hNS3Hw04KfyLcEySBuej8I2J_Co"
+  },
   "AllowedHosts": "*"
-  
+
 }
