chore(dep): reorganize project dependecies to follow CLEAN arch

--- a/TechLekh.Web/TechLekh.Web.csproj
+++ b/TechLekh.Web/TechLekh.Web.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TechLekh.Core\TechLekh.Core.csproj" />
+    <ProjectReference Include="..\TechLekh.Application\TechLekh.Application.csproj" />
     <ProjectReference Include="..\TechLekh.Infra\TechLekh.Infra.csproj" />
   </ItemGroup>
 
